<resources>
    <string name="app_name">Journal App</string>
    <string name="add_entry">Add a new entry</string>
    <string name="record_entry">Record Your Journal Entry</string>
    <string name="title_label">Title</string>
    <string name="date_label">Date: </string>
    <string name="end_label">End-time: </string>
    <string name="start_label">Start-time: </string>
    <string name="to_label">To</string>
    <string name="save_label">Save</string>
    <string name="date_hint">minutes</string>
    <string name="info">Info</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="ok">OK</string>
    <string name="app_info">This app allows users to record their day to day activities. It uses the Room database and Architecture components.</string>
</resources>