<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:background="@color/design_default_color_secondary"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:text="@string/title_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="@color/design_default_color_secondary"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_item_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/date_label"
            android:textStyle="italic" />
        <TextView
            android:id="@+id/txt_item_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_marginLeft="20dp"
            android:text="@string/start_label"
            android:textStyle="italic" />
        <TextView
            android:id="@+id/txt_item_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/end_label"
            android:padding="5dp"
            android:textStyle="italic" />
    </LinearLayout>

</LinearLayout>