<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:id="@+id/edit_date"
    android:background="@color/silver"
    tools:context=".AddEntryActivity">


    <TextView
        android:layout_marginBottom="30dp"
        android:id="@+id/record_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:text="@string/record_entry" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/title_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:textSize="20dp"
            android:text="@string/title_label" />

        <EditText
            android:id="@+id/edit_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/title_label"
            android:inputType="textCapWords" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:textSize="20dp"
            android:text="@string/date_label" />
        <Button
            android:id="@+id/btn_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/linked_blue"
            android:onClick="showDatePickerDialog"
            android:text="@string/date_label" />


    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/start_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:textSize="20dp"
            android:text="@string/start_label" />

        <Button
            android:id="@+id/btn_start"
            android:layout_width="85dp"
            android:layout_height="40dp"
            android:layout_marginRight="20dp"
            android:onClick="showDatePickerDialog"
            android:text="@string/start_label" />

        <TextView
            android:id="@+id/end_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="20dp"
            android:textSize="20dp"
            android:text="@string/end_label" />

        <Button
            android:id="@+id/btn_end"
            android:layout_width="85dp"
            android:layout_height="40dp"
            android:onClick="showDatePickerDialog"
            android:text="@string/end_label" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:onClick="saveEntry"
        android:text="@string/save_label" />

</LinearLayout>